css/header.css
/* ----------------------------------------------------------------
	header block
------------------------------------------------------------------*/
#header-block {
    display:block;
    height: 80px;
    width: 100%;
    background: #111111;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    align-items: center;
    text-transform: uppercase;
}

.header-menu {
    color: white;
    line-height: 21px;
    font-family: Raleway;
}

#logo {
    display:block;
    float: left;
    margin-top: 24px;
    margin-left: 5%;
}

#menuCources {
    color:white;
    display: block;
    float: left;
    margin-left: 6%;
    margin-top: 28px;
}

#sendButtonText:hover {
    background: #F66F5D;
    color: #FFFFFF;
    border-color: #F66F5D
}

#sendButtonText:focus {
    background: #F66F5D;
    color: #FFFFFF;
    border-color: #F66F5D
}

#sendButtonText {
    display: block;
    float: right;
    margin-right: 7%;

    margin-top: 18px;
    margin-left: 2%;
    padding-top: 10px;

    border-width: 1px;
    border-style: solid;

    width: 35%;
    max-width: 202px;
    height: 44px;
    text-align: center;

    color: #FFFFFF;

    border: 1px solid #FFFFFF;
    box-sizing: border-box;
    font-family: Raleway;
}

.header-menu #letter-icon{
    display: none;
    cursor: pointer;
    position: absolute;
    right: 86px;
    top: 24px;
}

.header-menu .burger-icon {
    display: none;
    cursor: pointer;
    position: absolute;
    right: 36px;
    top: 26px;
  }
  
  .bar1, .bar2, .bar3 {
    width: 24px;
    height: 1px;
    background-color: #F66F5D;
    margin: 6px 0;
    transition: 0.4s;
  }

#mobile-menu-fullscreen{
    left: 0;
    top: 80px;
    bottom: 0;
    background-color: #212121;
    min-height: 100vh;
    width: 100vw;
    position: absolute;
    height: 100%;
    display: none;
  }

  .header-menu-mobile{
    
    color:white;
    display: none;
    float: left;
    margin-left: 6%;
    margin-top: 28px;
  }

  #sendButtonText-mobile{

    display: none;
    
    cursor:pointer;

    position: fixed;
    bottom: 30px;
    left: 50%;
    transform: translateX(-50%);

    border-width: 1px;
    border-style: solid;
    padding-top: 10px;

    width: 100%;
    max-width: 300px;
    height: 44px;
    text-align: center;

    color: #FFFFFF;

    border: 1px solid #FFFFFF;
    box-sizing: border-box;
    font-family: Raleway;

  }

  #sendButtonText-mobile:hover {
    background: #F66F5D;
    color: #FFFFFF;
    border-color: #F66F5D
}

  @media screen and (max-width: 600px) {
    .header-menu #menuCources,#sendButtonText,#mobile-menu-fullscreen,.header-menu-mobile {display: none;}
    .header-menu .burger-icon {
        display: inline-block;
        cursor: pointer;
        position: absolute;
        right: 36px;
        top: 26px;
    }
    .header-menu #letter-icon {
      display: inline-block;
      cursor: pointer;
      position: absolute;
      right: 86px;
      top: 26px;
  }
  }

  @media screen and (max-width: 600px) {
    .header-menu.responsive #mobile-menu-fullscreen,#sendButtonText-mobile,.header-menu-mobile{
        display: block;
    }

    .header-menu.responsive #letter-icon{
      display: none;
    }

    .header-menu.responsive .burger-icon {
      position: absolute;
      right: 36px;
      top: 26px;
    }
    .header-menu.responsive .header-menu-mobile {
      max-width: 130px;
      margin: 0 30px;
      padding-top: 20px;
      float: none;
      display: block;
    }
  }


  
  .change .bar1 {
    -webkit-transform: rotate(-25deg) translate(-9px, 3px);
    transform: rotate(-45deg) translate(-3px, 4px);
  }
  
  .change .bar2 {opacity: 0;}
  
  .change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-7px, -6px);
  }

  

